# shodoukan-db

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
builder/: Cargo.toml
builder/src/: datasources.rs  http.rs  lang.rs  lib.rs  main.rs  progress.rs
builder/src/datasources/: jlpt.rs  jmdict.rs  kanjidic.rs
builder/src/datasources/jlpt/: dtos.rs  source.rs
builder/src/datasources/jmdict/: dtos.rs  iterator.rs  mappers.rs  parser.rs
builder/src/datasources/kanjidic/: dtos.rs  iterator.rs  mappers.rs  parser.rs
builder/src/datasources/kanjivg/: source.rs
builder/src/datasources/radkfile/: source.rs
builder/src/datasources/tatoeba/: source.rs
builder/src/traits/: datasource.rs
builder/tests/: kanjidic_mapper_tests.rs  kanjivg_source_tests.rs  mapper_tests.rs  pipeline_tests.rs  queries.sql  radkfile_source_tests.rs
builder/tests/fixtures/: jmdict_sample.xml  kanjidic_sample.xml
core/: Cargo.toml
core/src/domain/: models.rs
core/src/domain/models/: entry.rs  kanji.rs
core/src/infrastructure/: sqlite.rs
core/src/infrastructure/sqlite/: connection.rs  entities.rs  repository.rs  schema.rs
core/tests/: kanji_repository_tests.rs  repository_tests.rs
docs/: schema.md
