[package]
name = "builder"
version = "0.5.0"
edition = "2024"

[dependencies]
core = { version = "0.5.0", path = "../core" }
flate2 = "1.1.5"
quick-xml = { version = "0.38.4", features = ["serialize"] }
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1"

[dev-dependencies]
rusqlite = { workspace = true }
