[package]
name = "builder"
version = "0.5.1"
edition = "2024"

[dependencies]
core = { version = "0.5.1", path = "../core" }
bzip2 = "0.4"
encoding_rs = "0.8"
flate2 = "1.1.5"
quick-xml = { version = "0.38.4", features = ["serialize"] }
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
tar = "0.4"
zip = "2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1"

[dev-dependencies]
rusqlite = { workspace = true }
